syntax = "proto3";
package UsersRegistration;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "UsersRegistrationService";

enum UserOperationResult {
	ACCEPTED = 0;
	DECLINED = 1;
}

message CertificateDTO {
	int32 id = 1;
	string certificateHash = 2;
	string algorithm = 3;
	google.protobuf.Timestamp startDate = 4;
	google.protobuf.Timestamp endDate = 5;
}

message UserDTO {
	int32 id = 1;
	string userName = 2;
	string userPhone = 3;
	string userComment = 4;
	repeated CertificateDTO certificatesList = 5;
}

message UserRequest {
	UserDTO user = 1;
}

message UserResponse {
	UserOperationResult result = 1;
}

message RegisteredUsersResponse {
	repeated UserDTO users = 1;
}

service CertificateUsersRegistrationService {
	rpc RegisterUser (UserRequest) returns (UserResponse);
	rpc UnregisterUser (UserRequest) returns (UserResponse);
	rpc UpdateUser (UserRequest) returns (UserResponse);
	rpc GetRegisteredUsers (google.protobuf.Empty) returns (RegisteredUsersResponse);
}